examples/test/testpolicy685.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy685
  namespace: namespace121
spec:
  podSelector:
    matchLabels:
      key45: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value18
          key34: value4
      podSelector:
        matchLabels:
          key49: value28
          key25: value39
          key20: value19
